Working swift socket, but slow AF
I really really need to understand why it takes so long to get a
response parsed.

--- a/PcVolumeControl/Base.lproj/Main.storyboard
+++ b/PcVolumeControl/Base.lproj/Main.storyboard
@@ -464,6 +464,7 @@
         <image name="volume-thumbslider.png" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="spJ-x4-y41"/>
         <segue reference="oMA-JO-w79"/>
     </inferredMetricsTieBreakers>
 </document>
