--- a/PcVolumeControl/Base.lproj/Main.storyboard
+++ b/PcVolumeControl/Base.lproj/Main.storyboard
@@ -444,8 +444,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="App: v1.7" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lD0-5E-ron">
-                                                    <rect key="frame" x="259" y="11" width="70" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="App: v0.0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lD0-5E-ron">
+                                                    <rect key="frame" x="242.5" y="11" width="86.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
@@ -493,6 +493,7 @@
                     </tableView>
                     <connections>
                         <outlet property="aboutTableView" destination="Mdc-Up-ALp" id="dlO-1j-yA7"/>
+                        <outlet property="buildNumberLabel" destination="lD0-5E-ron" id="WvM-N9-dZr"/>
                         <segue destination="zBk-Ud-178" kind="show" identifier="closeAbout" id="HMQ-MO-tD9"/>
                     </connections>
                 </tableViewController>
@@ -506,6 +507,6 @@
         <image name="volume-thumbslider.png" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ZCj-f2-AIv"/>
+        <segue reference="HMQ-MO-tD9"/>
     </inferredMetricsTieBreakers>
 </document>
